# CUDA

Blatt_1/: Makefile  list.cpp  list.h  main.cpp
Blatt_2/: 1.txt  CMakeLists.txt  main.cu
Blatt_3/: A1.txt
Blatt_3/raytracer/scenes/: scene.yaml  test.yaml
Blatt_3/raytracer/src/: main.cc  parser.cc  raytracer.cc  raytracer.h  types.h
Blatt_4/dotRandVect/: Antwort.txt  CMakeLists.txt  dotRandVect.cu
Blatt_4/raytracer/: CMakeLists.txt
Blatt_4/raytracer/scenes/: squirrel.yaml
Blatt_4/raytracer/src/: device.cu  device.cu~  device.h  device.h~  main.cc  main.cc~  parser.cc  ppm_writer.cc  raytracer.cc  types.cc  types.h
Blatt_5/raytracer/: CMakeLists.txt
Blatt_5/raytracer/scenes/: squirrel.yaml
Blatt_5/raytracer/src/: device.cu  main.cc  parser.cc  raytracer.cc  types.h
Blatt_6/: Aufgabe 3.txt  Aufgabe4.txt  squirrel.ppm
Blatt_6/raytracer/src/: parser.cc  raytracer.cc  raytracer.h  window.cc
Blatt_7/: Informationen zu den Aufgaben.txt
Blatt_7/A1/raytracer/: CMakeLists.txt
Blatt_7/A1/raytracer/scenes/: squirrel.yaml  tetraeder.yaml
Blatt_7/A1/raytracer/src/: main.cc  raytracer.cc  types.cc
Blatt_7/A2/raytracer/: CMakeLists.txt
Blatt_7/A2/raytracer/scenes/: scene_angle_v2.yaml  tetraeder_new.yaml
Blatt_7/A2/raytracer/src/: parser.h  raytracer.cc  raytracer.h  window.h
Blatt_7/A3/raytracer/: CMakeLists.txt
Blatt_7/A3/raytracer/scenes/: test1.yaml  tetraeder_new.yaml
Blatt_7/A3/raytracer/src/: antialiasing.cc  antialiasing.h  main.cc  parser.cc  ppm_writer.cc  ppm_writer.h  raytracer.cc  types.cc  types.h  window.cc
Blatt_8/: A2.txt
